--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
             <span id="subject-item">Type an animal here <input id="subject" type="text"><input id="add-subject" value="Add Item" type="submit"></span>
             </form>
         </div>
-    </div>
-    
-    <div class="row">
-        <div id="gifs"></div>
-    </div>
+    </div> 
+        <div class="row">
+            <div class ="col sm-12" id="gifs"></div>
+        </div>
     </div>
     <script src="assets/javascript/app.js"></script>
 </body>
