--- a/index.html
+++ b/index.html
@@ -18,16 +18,23 @@
                 <button animal-type="bird" class="btn btn-primary">bird</button>
             </div>
         </div>
+        <div class="row">
+            <div class="col" id="clear-button">
+                <button class="btn btn-secondary">reset</button>
+            </div>
+        </div>
     <br>
     <div class="row">
         <div class="col sm-4">
             <form>
-            <span id="subject-item">Type an animal here <input id="subject" type="text"><input id="add-subject" value="Add Item" type="submit"></span>
+            <span id="subject-item"><h6>Type an animal here </h6><input id="subject" type="text"><input id="add-subject" value="Add Item" type="submit"></span>
             </form>
+            <br>
+            <span><h4>Click any gif to pause!</h4></span>
         </div>
     </div> 
         <div class="row">
-            <div class ="col sm-12" id="gifs"></div>
+            <div class="col md-8" id="gifs"></div>
         </div>
     </div>
     <script src="assets/javascript/app.js"></script>
